# humpty

./: CMakeLists.txt  README.md  TODO.md  xmake.lua
.github/workflows/: release.yml
scripts/: build.sh  test.sh
src/: main.cpp
src/cli/: arguments.cpp  arguments.hpp  dispatch.cpp  dispatch.hpp  parsing.cpp  parsing.hpp
src/models/: chunk.cpp  chunk.hpp  manifest.cpp  manifest.hpp
src/services/: checksums.cpp  checksums.hpp  joiner.cpp  joiner.hpp  splitter.cpp  splitter.hpp
tests/: roundtrip_tests.cpp  splitter_tests.cpp  test_decls.hpp  test_main.cpp  test_utils.hpp
tests/cases/: joiner_tests.cpp  urandom_tests.cpp
